@@ -33,7 +33,7 @@
 /*
  * Portions Copyright (c) 2005 Gunnar Ritter, Freiburg i. Br., Germany
  *
- * Sccsid @(#)n9.c	1.40 (gritter) 4/2/06
+ * Sccsid @(#)n9.c	1.41 (gritter) 4/14/06
  */
 
 /*
@@ -931,7 +931,9 @@ illseq(int wc, const char *mb, int n)
 {
 	if ((warn & WARN_INPUT) == 0)
 		return;
-	if (n == 0) {
+	if (n == -3)
+		errprint("non-ASCII input byte '\\%o' terminates name", wc);
+	else if (n == 0) {
 		if (wc & ~0177)
 			errprint("ignoring '%U' in input", wc);
 		else
